<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="ExtraText">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="333dp"
                android:layout_height="327dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_desc"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_marginTop="15dp"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="5dp"
                android:text="@string/app_description"
                android:textAlignment="center" />

            <Button
                android:id="@+id/getStartedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="20dp"
                android:backgroundTint="#4CAF50"
                android:padding="15dp"
                android:text="@string/btn_start"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="586dp" />

            <Button
                android:id="@+id/analysisHistoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/getStartedBtn"
                android:layout_marginTop="10dp"
                android:backgroundTint="#8BC34A"
                android:padding="15dp"
                android:text="@string/btn_history"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="659dp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
