<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="ExtraText">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="344dp"
                android:layout_height="292dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/logo_desc"
                android:foregroundGravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_marginTop="0dp"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/researcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_researcher"
                android:textColor="#8BC34A"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/researcherInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/researcher">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ecosystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/researcherInput"
                android:layout_marginTop="10dp"
                android:text="Ecosystem"
                android:textColor="#8BC34A"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ecosystemInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ecosystem"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ecosystemInput"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_samplenum"
                android:textColor="#8BC34A"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/startAnalysisBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numberInput"
                android:layout_marginTop="22dp"
                android:backgroundTint="#4CAF50"
                android:padding="15dp"
                android:text="@string/btn_startanalysis"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="586dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
